<resources>
    <string-array name="estados">
        <item>Seleccionar...</item>
    </string-array>
    <string name="app_name">Ludi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- PERFIL -->
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="txt_edad">Edad</string>
    <string name="txt_peso">Peso</string>
    <string name="txt_altura">Altura</string>
    <string name="txt_escuela">Escuela</string>
    <string name="btn_guardar">Guardar</string>

    <!-- ACTIVIDADES -->
    <string name="btn_act1">ACTIVIDAD 1</string>
    <string name="btn_act2">ACTIVIDAD 2</string>
    <string name="btn_act3">ACTIVIDAD 3</string>
    <string name="btn_act4">ACTIVIDAD 4</string>

    <!-- ACTIVIDAD 1 -->
    <string name="btnRespuesta1">RESPUESTA 1</string>
    <string name="btnRespuesta2">RESPUESTA 2</string>
    <string name="btnSiguiente">SIGUIENTE</string>
    <string name="txtPregunta">PREGUNTA</string>
    <string name="title_activity_libro">Libro</string>
    <string name="title_activity_instrucciones_act1">JARRA DEL BUEN BEBER</string>
    <string name="title_activity_instrucciones_act2">ALIMENTOS DE ORIGEN ANIMAL Y LEGUMINOSAS</string>
    <string name="title_activity_instrucciones_act3">PLATO DEL BIEN COMER</string>
    <string name="title_activity_instrucciones_act4">FRUTAS Y VERDURAS</string>

    <string name="title_activity_actualizar">ACTUALIZAR</string>
    <string name="title_activity_avance">AVANCE</string>
    <string name="title_activity_gato">FRUTAS Y VERDURAS</string>


<<<<<<< HEAD
    <string name="title_activity_ahorcado">CEREALES</string>
    <string name="title_activity_instrucciones_act5">CEREALES</string>
=======
    <string name="title_activity_ahorcado">Ahorcado</string>
    <string name="title_activity_instrucciones_act5">InstruccionesAct5</string>
    <string name="title_activity_escuela">Escuela</string>
    <string name="title_activity_seleccionar_escuela">SeleccionarEscuela</string>
>>>>>>> 76347c6eafbcdb960dd40ed364f132dbba9c7b4e

</resources>
