<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ludi.tt_ludi.PerfilFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txt_nombre"
        android:ems="10"
        android:id="@+id/txt_nombre" />

    <EditText
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txt_apellidos"
        android:ems="10"
        android:id="@+id/txt_apellidos" />

    <EditText
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txt_edad"
        android:text="@string/txt_edad" />

    <EditText
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txt_peso"
        android:text="@string/txt_peso" />

    <EditText
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txt_altura"
        android:text="@string/txt_altura" />

    <EditText
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_escuela"
        android:text="@string/txt_escuela" />
</LinearLayout>
